	o 'plot2'        : -) better display of time series objects, when 'plot.type' is 'single'.
		              The (nicer) 'plot.xts' function is used instead of the previous 'plot.zoo'.
		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "weeks", "hours", "minutes", 
		              "seconds", which should work with sub-daily time series
		           -) fixed problem with the 'cex.axis' argument when 'plot.type="multiple"' (this was a zoo problem, and it was 
		              fixed in zoo_1.7-1).	
	o 'ggof'         : -) better display of time series objects (by using the new 'plot2' and 'drawxaxis/drawTimeAxis')
		           -) it works with xts objects as well.
		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
	 	              "minutes", and "seconds", and its default value was changed to "auto". 
	 	           -) the name of 'sim' and 'obs' are now used as default for the legend.
	o 'plotbands'    : -) better display of time series objects. The (nicer) 'plot.xts' function is used 
			      instead of the previous 'plot.zoo', and it uses the new 'drawTimeAxis' function.
		           -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
	 		      "minutes", and "seconds", and its default value was changed to "auto". 
	o 'plotbandsonly': -) it works with xts objects as well
			   -) 'legend' argument was removed (it was not used)
			   -) 'leg.cex' argument was removed (it was not used)
	o 'NSeff'   : -) its name was changed to 'NSE'. The old name 'NSeff' is deprecated but is still working for backwards compatibility.
	              -) now it returns NA instead of an error when the denominator of its formula is equal to zero.
	o 'rNSeff'  : -) its name was changed to 'rNSE'. The old name 'rNSeff' is deprecated but is still working for backwards compatibility.